[gd_scene load_steps=9 format=3 uid="uid://dkllmwqk8sp0c"]

[ext_resource type="Texture2D" uid="uid://3jwvltnfwti" path="res://sprites/characters/Ellie.png" id="1_dhw2d"]
[ext_resource type="Script" path="res://scripts/world/npc.gd" id="1_get3j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l1dip"]
size = Vector2(4, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b5tdi"]
size = Vector2(4, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_huh31"]
size = Vector2(7, 4.5)

[sub_resource type="Animation" id="Animation_0uubp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_cxcne"]
resource_name = "flip"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(-0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(-0.5, 0.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wyjtf"]
_data = {
"RESET": SubResource("Animation_0uubp"),
"flip": SubResource("Animation_cxcne")
}

[node name="npc" type="Node2D"]
texture_filter = 1
script = ExtResource("1_get3j")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.196078)
position = Vector2(1, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_dhw2d")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_dhw2d")

[node name="Interact" type="Area2D" parent="Sprite"]
scale = Vector2(2, 2)
collision_layer = 4

[node name="Hitbox" type="CollisionShape2D" parent="Sprite/Interact"]
position = Vector2(9, 4.5)
shape = SubResource("RectangleShape2D_l1dip")
debug_color = Color(1, 0, 0, 0.419608)

[node name="Flip" type="Area2D" parent="Sprite"]
position = Vector2(-14, 9)
scale = Vector2(2, 2)
collision_layer = 0

[node name="Hitbox" type="CollisionShape2D" parent="Sprite/Flip"]
position = Vector2(-2, 0)
shape = SubResource("RectangleShape2D_b5tdi")
debug_color = Color(1, 0, 0.701961, 0.419608)

[node name="Wall" type="StaticBody2D" parent="."]
position = Vector2(21, 13.5)
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 0

[node name="Hitbox" type="CollisionShape2D" parent="Wall"]
position = Vector2(-10.5, -4.5)
shape = SubResource("RectangleShape2D_huh31")

[node name="Animate" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wyjtf")
}

[connection signal="area_entered" from="Sprite/Interact" to="." method="_on_interact_area_entered"]
[connection signal="area_exited" from="Sprite/Interact" to="." method="_on_interact_area_exited"]
[connection signal="area_entered" from="Sprite/Flip" to="." method="_on_flip_area_entered"]
